endpoint de agendamento e geração de qr code
