# src/types/iAgendamento.ts
@@ -1,0 +1,11 @@
+export type iAgendamentoRequest = {
+    estabelecimentoId: number,
+    servicoId: number,
+    horario: Date,
+    profissionalId: number
+}
+
+export enum StatusEnum {
+    "pendente" = "pendente", 
+    "realizado" = "realizado"
+}
